[gd_scene load_steps=19 format=2]

[ext_resource path="res://img/pixelart/shadow.png" type="Texture" id=1]
[ext_resource path="res://scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://img/pixelart/feet.png" type="Texture" id=3]
[ext_resource path="res://img/pixelart/torso.png" type="Texture" id=4]
[ext_resource path="res://img/pixelart/head.png" type="Texture" id=5]
[ext_resource path="res://scenes/Player/BulletShootter.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Player/Trickbar.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Player/Effect_Get.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Misc/TrickImg.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/Misc/Faceplant.tscn" type="PackedScene" id=10]
[ext_resource path="res://img/pixelart/marisa_dead.png" type="Texture" id=11]
[ext_resource path="res://img/pixelart/MagicCircle.png" type="Texture" id=12]
[ext_resource path="res://img/pixelart/MagicStar.png" type="Texture" id=13]
[ext_resource path="res://misc/CyberSloth.ttf" type="DynamicFontData" id=14]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 25, 4, 1 )
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
color = Color( 0.741176, 0.894118, 0.901961, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 14 )

[sub_resource type="CircleShape2D" id=3]

[node name="Player" type="KinematicBody2D" groups=["Player"]]
script = ExtResource( 2 )
BulletShootter = ExtResource( 6 )
Effect_text = ExtResource( 8 )
TrickImg = ExtResource( 9 )
FacePlant = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MagicCircle" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 3, 3 )
z_index = -1
texture = ExtResource( 12 )

[node name="Stars" type="Node2D" parent="MagicCircle"]

[node name="MagicStar" type="Sprite" parent="MagicCircle"]
texture = ExtResource( 13 )

[node name="Tween" type="Tween" parent="MagicCircle"]

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, 7.95808e-13 )
z_index = -1
z_as_relative = false
amount = 50
lifetime = 3.0
randomness = 0.12
local_coords = false
process_material = SubResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.294118 )
position = Vector2( 0, -30 )
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
hframes = 12

[node name="Character" type="Node2D" parent="."]

[node name="Feet" type="Sprite" parent="Character"]
position = Vector2( 0, -30 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
hframes = 12
vframes = 2
frame = 12

[node name="Torso" type="Sprite" parent="Character"]
position = Vector2( 0, -30 )
scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
hframes = 12

[node name="Head" type="Sprite" parent="Character"]
position = Vector2( 0, -30 )
scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
hframes = 12
vframes = 2

[node name="Jumpbar" type="ColorRect" parent="Character"]
visible = false
margin_left = -33.0
margin_top = -99.0
margin_right = 33.0
margin_bottom = -93.0
color = Color( 0.14902, 0.180392, 0.462745, 1 )

[node name="Jump" type="Label" parent="Character/Jumpbar"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -36.5
margin_top = -20.0
margin_right = 36.5
margin_bottom = -4.0
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_left = -2.0
margin_top = -2.0
margin_right = 55.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline2" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_top = -2.0
margin_right = 57.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline3" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_left = -2.0
margin_right = 55.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline4" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_left = 2.0
margin_top = -2.0
margin_right = 59.0
margin_bottom = 33.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline5" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_left = 2.0
margin_right = 59.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline6" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_left = -2.0
margin_top = 2.0
margin_right = 55.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline7" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_top = 2.0
margin_right = 57.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Outline8" type="Label" parent="Character/Jumpbar/Jump"]
show_behind_parent = true
margin_left = 2.0
margin_top = 2.0
margin_right = 59.0
margin_bottom = 37.0
custom_colors/font_color = Color( 0.384314, 0.670588, 0.823529, 1 )
custom_fonts/font = SubResource( 4 )
text = "Weak Jump"

[node name="Trickbar" parent="Character" instance=ExtResource( 7 )]
visible = false
margin_top = -108.0
margin_bottom = -84.0

[node name="EffectTxts" type="Node2D" parent="Character"]

[node name="CamHolder" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CamHolder"]
current = true
smoothing_speed = 50.0

[node name="Damaged" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Graze" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Graze"]
shape = SubResource( 3 )

[node name="Death" type="Sprite" parent="."]
visible = false
position = Vector2( -1, -5 )
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )

[node name="Casts" type="Node2D" parent="."]

[connection signal="area_exited" from="Graze" to="." method="_on_Graze_area_exited"]
